# pastureen_mono

./: .gitignore  Dockerfile  README.md  build_everything.sh  deploy_everything.sh  docker-compose.yml  example.env  go.mod  result.json  test.json
cdk_infra/: blogSite.go  cdk.json  env.go  go.mod  main.go  s3Utils.go  staticAssets.go
cron/: shutdown.sh  shutdown_dev_server.sh  shutdown_dev_server1.sh
db_backup/: .gitignore  backup.sh
golang/: go.work
proto/: helloworld.proto
rust/: .gitignore  Cargo.toml  Dockerfile.lambda  setup_auth_service_test  setup_auth_service_test.sh  test.sh  test_auth_service  test_auth_service.sh
rust/actix_poc/: Cargo.toml
rust/auth/: Cargo.toml  local.sh  required_envs  setup.sh  setup_local.sh  test.sh  test_local.sh
rust/auth/src/: lib.rs
rust/auth/tests/: service.rs
rust/auth/tests/common/: mod.rs
rust/auth_api/: Cargo.toml  README.md  example.env  setup.sh  setup_local.sh  setup_test.sh  test.sh  test_local.sh
rust/auth_api/src/: lib.rs
rust/auth_api/tests/: service.rs
rust/auth_api/tests/common/: mod.rs
rust/auth_client/: Cargo.toml  test.sh
rust/auth_client/src/: lib.rs
rust/auth_client/tests/: client.rs
rust/auth_contracts/: Cargo.toml  README.md
rust/auth_contracts/src/: lib.rs
rust/auth_domain/: Cargo.toml  example.env  schema.sql
rust/auth_domain/src/: lib.rs
rust/auth_domain/tests/: service.rs
rust/auth_domain/tests/common/: mod.rs
rust/auth_models/: Cargo.toml
rust/auth_models/src/: lib.rs
rust/auth_service/: .gitignore  Cargo.toml  README.md  build.rs  deploy.sh  drop.sql  example.env  local.sh  required_envs  reset_db.sh  schema.sql  setup.sh  setup_db.sh
rust/auth_service/src/: lib.rs  main.rs  main.rs-rest
rust/auth_service/terraform/module/: locals.tf  main.tf  variables.tf
rust/auth_service/tests/: service.rs
rust/auth_service/tests/common/: mod.rs
rust/auth_service_models/: Cargo.toml
rust/auth_service_models/src/: lib.rs
rust/auth_web_service/: Cargo.toml  deploy.sh  example.env  setup.sh
rust/auth_web_service/terraform/: main.tf
rust/blog/: Cargo.toml
rust/blog/src/: contracts.rs  lib.rs  pages.rs
rust/blog/src/pages/: index_page.rs  post_page.rs  posts_page.rs  svgs.rs  utils.rs
rust/blog_htmx/: Cargo.toml  deploy.sh  local.sh  required_envs
rust/blog_htmx/src/: lib.rs  main.rs
rust/blog_htmx/terraform/: providers.tf
rust/blog_htmx/terraform/module/: locals.tf
rust/blog_site/: Cargo.toml  blog.css  deploy.sh  index.html  local.sh  posts.js
rust/blog_site/src/: lib.rs  main.rs  pages.rs
rust/blog_skeleton/: Cargo.toml  blog.css  deploy.sh  local.sh  required_envs
rust/blog_skeleton/src/: main.rs
rust/blog_skeleton/terraform/: main.tf  providers.tf
rust/blog_skeleton/terraform/module/: main.tf
rust/cli/: Cargo.toml
rust/cli/src/: lib.rs
rust/components/: Cargo.toml
rust/components/src/: lib.rs
rust/csv_iterator/: Cargo.toml
rust/csv_iterator/src/: lib.rs
rust/ec2_service/: Cargo.toml
rust/ec2_service/src/: main.rs
rust/fin_api/: Cargo.toml  README.md  fin.sql
rust/fin_api/.sqlx/: query-0832c8939bbcf5126bf9480f9515c7c974b6a182cea161bc6cc5e85b26d5efc9.json  query-2543befcc4306b90900d04726463ede3d0c80d4fd6e1f6ac3141cfbc9cd5de1d.json  query-40886f75610a42092ef34bbefd4914b158de3bf499cb63b3cb2b54692f706764.json  query-50bcbbaa05b0f6237ab03c2b3d7e6f3ad6973637a300bbba78ea5b88bfeaf460.json  query-64736710387c50bb8b209d74bf58b9ab326c7742935d10e55d2ad135a55db757.json  query-67698bc545dd66dd4b73ae37e03f9ba4ff737325757a11bea30917e239c95ad1.json  query-6c67d5d31e8cb7ce88e4fb821717349ce39505e2c80d44c944ec98a1e341dec7.json  query-9318fde8bd477e82c60e8719c12740907d938f60483dad7c122749895f9a5742.json  query-a6cd15e70c399f548b7dca2cdbd407074ca8a4333b37b5dbf6eb6ba77a4d34d9.json  query-ae22869e12f5447b63d7c2775410f50d281194b94f615734c03aa8017d21f57d.json  query-b16c53027189bdeddbeaaeb1ca94042a7d53aea257f6d14a761e40a5b6854171.json  query-b64742346aaecb1ebc98a9dcd46b75f26fa08e00b8dad1acc989db5cea378b36.json  query-d8f25b6499fc838c2d2d25784ed9812f2868e02af036a989517cca3bfbd16c81.json  query-d9ded5c3a446bf08524d46babfb78f78349a7496df23f47b34849d261ba6cc81.json  query-e7a576554630cfe109f443e7d55794582f102de1c98fe1d471bbb801ce4914cd.json
rust/fin_api/src/: fin_core.rs  fin_dynamodb.rs  fin_postgres.rs  lib.rs
rust/fin_cli/: Cargo.toml
rust/fin_cli/src/: main.rs
rust/lambda_build/: .dockerignore  Dockerfile  build.sh  deploy.sh
rust/lambda_build/terraform/: main.tf
rust/librarian_client/: Cargo.toml
rust/librarian_client/src/: lib.rs
rust/post_generator/: Cargo.toml  demo.md  local.sh
rust/post_generator/src/: lib.rs  main.rs
rust/print_table/src/: lib.rs  sample_output
rust/prpc_client/: Cargo.toml
rust/prpc_core/: Cargo.toml
rust/prpc_core/src/: error.rs  lib.rs  request_response.rs
rust/prpc_server/: Cargo.toml
rust/prpc_server/src/: lib.rs
rust/prpc_server_hyper_wrapper/: Cargo.toml
rust/prpc_server_lambda_wrapper/: Cargo.toml
rust/prpc_server_lambda_wrapper/src/: lib.rs
rust/publisher/: Cargo.toml  deploy.sh  local.sh  required_envs
rust/publisher/src/: lib.rs  main.rs
rust/publisher/terraform/: .terraform.lock.hcl  providers.tf
rust/publisher/terraform/module/: locals.tf
rust/refresh/: Cargo.toml  refresh.css  refresh.js  tsconfig.json
rust/refresh/src/: actionable.rs  close_svg.rs  deps.rs  global_search.rs  htmx_types.rs  layout.rs  lib.rs  list.rs  list_item.rs  loader.rs  menu.rs  menu_item.rs  page.rs  search_svg.rs  utils.rs
rust/refresh_blog/: Cargo.toml  blog.css
rust/refresh_blog/src/: lib.rs
rust/reqwest_utils/: Cargo.toml
rust/reqwest_utils/src/: lib.rs
rust/reverse_proxy/: Cargo.toml  deploy.sh  local.sh  required_envs
rust/reverse_proxy/src/: main.rs
rust/reverse_proxy/terraform/: deploy.sh  providers.tf
rust/reverse_proxy/terraform/module/: locals.tf  main.tf
rust/router_service/: Cargo.toml
rust/router_service/src/: main.rs
rust/shared_models/: Cargo.toml
rust/shared_models/src/: lib.rs
rust/terraform/aws_lambda/: locals.tf  main.tf
static-infra/: go.sum  (+1 more)
(+160 files in other folders)
