[workspace]
members = [
  "print_table",
  "csv_iterator",
  "cli",
  "actix_poc",
  "auth_models",
  "auth",
  "auth_service",
  "auth_service_models",
  "shared_models",
  "reverse_proxy",
  "components",
  "blog",
  "blog_skeleton",
  "publisher",
  "auth_client",
  "reqwest_utils"
]

resolver = "2"
