[workspace]
members = [
  "print_table",
  "csv_iterator",
  "cli",
  "actix_poc",
  "auth_models",
  "auth",
  "auth_service",
  "auth_service_models",
  "shared_models",
  "reverse_proxy",
  "refresh",
  "refresh_blog",
  "blog_skeleton",
  "blog_htmx",
  "publisher",
  "auth_client",
  "reqwest_utils",
  "librarian_client"
]

resolver = "2"
