[package]
name = "auth_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
shared_models = { path = "../shared_models" }
auth_models = { path = "../auth_models" }
auth_service_models = { path = "../auth_service_models" }
reqwest_utils = { path = "../reqwest_utils" }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
