[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.46"
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["postgres", "uuid", "runtime-tokio"] }
jsonwebtoken = "8.3.0"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.5.0", features = ["full"] }
