[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth_api = { path = "../auth_api" }
prost = "0.12.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.1"

[build-dependencies]
tonic-build = "0.10.1"

