[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
thiserror = "1.0.46"
serde = { version = "1.0.183", features = ["derive"] }
auth = { path = "../auth" }
auth_models = { path = "../auth_models" }
auth_service_models = { path = "../auth_service_models" }
shared_models = { path = "../shared_models" }
