[package]
name = "blog_htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
librarian_client = { path = "../librarian_client" }
shared_models = { path = "../shared_models" }
refresh = { path = "../refresh" }
maud = "0.25.0"
