[package]
name = "blog_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
components = { path = "../components" }
maud = "0.25.0"
serde = { version = "1.0.188", features = ["derive"] }
blog = { path = "../blog" }
