[package]
name = "fin_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "*" }
async-trait = { version = "*" }
aws-sdk-dynamodb = "0.28.0"
chrono = "0.4.26"
uuid = { version = "1.4.0", features = ["v4"] }

