[package]
name = "fin_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
fin_api = { path = "../fin_api" }
csv_iterator = { path = "../csv_iterator" }
chrono = "^0.4.26"
aws-sdk-dynamodb = "0.28.0"
aws-config = "0.55.3"
print_table = { path = "../print_table" }
