[package]
name = "post_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.14"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
axum =  { version = "0.6.20", features = ["headers"] }
reqwest = { version = "0.11.20", features = ["json"] }
blog = { path = "../blog" }
