[package]
name = "prpc_server_lambda_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.0"
prpc_core = { path = "../prpc_core" }
prpc_server = { path = "../prpc_server" }
serde_json = "1.0.96"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "*", features = ["derive"] }
