[package]
name = "refresh_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = "0.25.0"
refresh = { path = "../refresh" }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
