[package]
name = "reverse_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version="0.14.27", features=["full", "server"] }
hyper-tls = "0.5.0"
tokio = { version = "1.32.0", features = ["full"] }
thiserror = "1.0.46"
