[package]
name = "router_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.0"
prpc_core = { path = "../prpc_core" }
prpc_server = { path = "../prpc_server" }
prpc_server_lambda_wrapper = { path = "../prpc_server_lambda_wrapper" }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }


